--- a/src/App.css
+++ b/src/App.css
@@ -41,16 +41,16 @@
 /* Header & Navbar CSS */
 
 .headerAndIntroBackground {
-  background-image: url("../src/images/code-background.jpg"); /* Ensure the path is correct */
+  background-image: url("../src/images/code-background.jpg"); 
   background-size: cover; /* This will cover the entire header area */
-  background-position: center; /* This will center the image */
-  display: flex; /* Use flexbox for layout */
+  background-position: center; 
+  display: flex; /* Use flexbox */
   flex-direction: column; /* Stack header and intro vertically */
   color: white; /* Optional: change text color for better visibility */
 }
 
 .header-container {
-  display: flex; /* Use flexbox for layout */
+  display: flex; /* Use flexbox */
   justify-content: space-between; /* Space between left and right headers */
   align-items: center; /* Center items vertically */
   width: 100%; /* Full width */
@@ -93,4 +93,73 @@
 
 .intro {
   color: white;
+}
+
+
+/* CSS */
+.projects-btn {
+  padding: 0.6em 2em;
+  border: none;
+  outline: none;
+  color: rgb(255, 255, 255);
+  background: #111;
+  cursor: pointer;
+  position: relative;
+  z-index: 0;
+  border-radius: 10px;
+  user-select: none;
+  -webkit-user-select: none;
+  touch-action: manipulation;
+}
+
+.projects-btn:before {
+  content: "";
+  background: linear-gradient(
+    45deg,
+    #ff0000,
+    #ff7300,
+    #fffb00,
+    #48ff00,
+    #00ffd5,
+    #002bff,
+    #7a00ff,
+    #ff00c8,
+    #ff0000
+  );
+  position: absolute;
+  top: -2px;
+  left: -2px;
+  background-size: 400%;
+  z-index: -1;
+  filter: blur(5px);
+  -webkit-filter: blur(5px);
+  width: calc(100% + 4px);
+  height: calc(100% + 4px);
+  animation: glowing-button-85 20s linear infinite;
+  transition: opacity 0.3s ease-in-out;
+  border-radius: 10px;
+}
+
+@keyframes glowing-button-85 {
+  0% {
+    background-position: 0 0;
+  }
+  50% {
+    background-position: 400% 0;
+  }
+  100% {
+    background-position: 0 0;
+  }
+}
+
+.projects-btn:after {
+  z-index: -1;
+  content: "";
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  background: #222;
+  left: 0;
+  top: 0;
+  border-radius: 10px;
 }
