--- a/src/App.css
+++ b/src/App.css
@@ -154,3 +154,11 @@
   top: 0;
   border-radius: 10px;
 }
+
+/* Projects CSS */
+
+/* Lawn Screenshot CSS */
+
+.lawn-screenshot {
+  width: 100%; 
+}
