--- a/src/App.css
+++ b/src/App.css
@@ -83,9 +83,11 @@
   transition: background-color 0.3s; /* Smooth transition for hover effect */
 }
 
-.nav-link:hover {
-  background-color: 
-}
+/* Commented out b/c it was messing with projects-btn style. Need to figure out why  */
+
+/* .nav-link:hover {
+  background-color: #111
+} */
 
 /* Projects Button CSS */
 .projects-btn {
@@ -237,10 +239,10 @@
 
 .connect-icons a {
   font-size: 24px; /* Increase icon size */
-  color: #333; /* Default icon color */
+  color: #003f85; /* Default icon color */
   transition: color 0.3s; /* Smooth color transition */
 }
 
 .connect-icons a:hover {
-  color: #0073e6; /* Change color on hover */
+  color: #444; /* Change color on hover */
 }
