--- a/src/App.css
+++ b/src/App.css
@@ -83,7 +83,9 @@
   transition: background-color 0.3s; /* Smooth transition for hover effect */
 }
 
-/* Commented out b/c it was messing with projects-btn style. Need to figure out why  */
+/* TODO: 
+Commented out nav-link:hover b/c it was messing with projects-btn style. Need to figure out why  
+*/
 
 /* .nav-link:hover {
   background-color: #111
@@ -245,4 +247,21 @@
 
 .connect-icons a:hover {
   color: #444; /* Change color on hover */
+}
+
+/* About Me Section */
+
+#about {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  text-align: center;
+  padding: 2rem;
+  gap: 1rem; /* spaces between icon, h3, h5 */
+}
+
+.fa-solid.fa-circle-user {
+  font-size: 4rem; /* adjust size as needed */
+  display: block;
+  margin: 0 auto 0 auto; /* centers and adds space below */
 }
