Create Header folder w/ css and jsx files

--- a/src/components/NavigationBar/NavigationBar.css
+++ b/src/components/NavigationBar/NavigationBar.css
@@ -11,3 +11,11 @@
     text-decoration: none;
     transition: background-color 0.3s; /* Smooth transition for hover effect */
 }
+
+/* TODO: 
+Commented out nav-link:hover b/c it was messing with projects-btn style. Need to figure out why  
+*/
+
+/* .nav-link:hover {
+  background-color: #111
+} */
