--- a/src/components/Projects/Projects.css
+++ b/src/components/Projects/Projects.css
@@ -71,3 +71,18 @@
 #projects {
   border: 10px solid white; 
 }
+
+/* Lawn Screenshot CSS */
+
+.project-screenshot {
+  width: 100%; /* or a specific width like 300px */
+  height: auto; /* Maintain aspect ratio */
+  max-width: 300px; /* Set a maximum width */
+}
+
+/* Project Links CSS */
+
+.project-link {
+  background-color: #282828;
+  border: none;
+}
