Gave project-links !important tags in css

--- a/src/components/Projects/Projects.css
+++ b/src/components/Projects/Projects.css
@@ -83,6 +83,6 @@
 /* Project Links CSS */
 
 .project-link {
-  background-color: #282828;
-  border: none;
+  background-color: #282828 !important;
+  border: none !important;
 }
