--- a/src/components/Connect/Connect.css
+++ b/src/components/Connect/Connect.css
@@ -1,7 +1,7 @@
 /* Let's Connect CSS */
 
 #connect {
-    border: 10px solid white; 
+    background-color: black;
   }
   
   .connect-container {
