--- a/src/components/Technologies/Technologies.css
+++ b/src/components/Technologies/Technologies.css
@@ -1,5 +1,16 @@
 /* Technologies CSS */
 
-/* #technologies {
-    border: 10px solid white; 
-  } */
+#technologies {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  text-align: center;
+  padding: 2rem;
+  gap: 1rem; /* spaces between icon, h3, h5 */
+  }
+
+  .techonology-icon {
+    font-size: 4rem; /* adjust size as needed */
+    display: block;
+    margin: 0 auto 0 auto; /* centers and adds space below */
+  }
