--- a/src/components/Certificate/Certificates.css
+++ b/src/components/Certificate/Certificates.css
@@ -1,11 +1,17 @@
 /* Certificates CSS */
 
 #certificates {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  text-align: center;
+  padding: 2rem;
+  gap: 1rem; /* spaces between icon, h3, h5 */
     background-color: black;
   }
 
 .certificate-icon {
-  align-self: center;
-  font-size: 50px; 
-  margin: 5px; 
+  font-size: 4rem; /* adjust size as needed */
+  display: block;
+  margin: 0 auto 0 auto; /* centers and adds space below */
 }
