--- a/src/components/Connect/Connect.css
+++ b/src/components/Connect/Connect.css
@@ -1,7 +1,13 @@
 /* Let's Connect CSS */
 
 #connect {
-    background-color: black;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  text-align: center;
+  padding: 2rem;
+  gap: 1rem; /* spaces between icon, h3, h5 */
+  background-color: black;
   }
   
   .connect-container {
@@ -17,11 +23,13 @@
   }
   
   .connect-icons a {
-    font-size: 24px; /* Increase icon size */
-    color: #003f85; /* Default icon color */
-    transition: color 0.3s; /* Smooth color transition */
+    font-size: 4rem; /* adjust size as needed */
+    display: block;
+    margin: 0 auto 0 auto; /* centers and adds space below */
+    color: #003f85;
+    transition: color 0.3s;
   }
   
   .connect-icons a:hover {
-    color: #444; /* Change color on hover */
+    color: #282c34; /* Change color on hover */
   }
