Add rounded borders to aboutme, certs, & connect

--- a/src/components/AboutMe/AboutMe.css
+++ b/src/components/AboutMe/AboutMe.css
@@ -8,6 +8,8 @@
     padding: 2rem;
     gap: 1rem; /* spaces between icon, h3, h5 */
     background-color: black;
+    border: 1px solid black; 
+    border-radius: 10px;
   }
   
   .fa-solid.fa-circle-user {
