--- a/src/App.css
+++ b/src/App.css
@@ -44,3 +44,23 @@ html {
     transform: rotate(360deg);
   }
 }
+
+/* Universal Card CSS */
+.universal-card {
+  margin: 5px;
+  padding: 5px;
+  display: flex;
+  flex-direction: column;
+  align-items: center; /* center image horizontally */
+  justify-content: space-between; /* keep content spaced nicely */
+  height: 100%; /* equal height cards */
+  text-align: center;
+}
+
+/* Small Screens */
+@media screen and (max-width: 768px) {
+  .universal-card {
+    text-align: center;
+    align-items: center;
+  }
+}
