--- a/src/components/Technologies/Technologies.css
+++ b/src/components/Technologies/Technologies.css
@@ -1,16 +1,31 @@
 /* Technologies CSS */
-
 #technologies {
   display: flex;
   flex-direction: column;
   align-items: center;
   text-align: center;
   padding: 2rem;
-  gap: 1rem; /* spaces between icon, h3, h5 */
-  }
+  gap: 1.5rem;
+}
 
-  .techonology-icon {
-    font-size: 4rem; /* adjust size as needed */
-    display: block;
-    margin: 0 auto 0 auto; /* centers and adds space below */
-  }
+.technology-icon {
+  font-size: 4rem;
+  display: block;
+  margin: 0 auto;
+}
+
+/* Technologies Container */
+.technologies-container {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: 0.5rem;
+}
+
+.card-title {
+  background-color: #282c34;
+  width: 100%;
+  padding: 0.5rem 0;
+  border-radius: 5px;
+  margin-bottom: 0.5rem;
+}
